# dev

./: .gitignore  .gitmodules  README.md  first-set-bit.cpp  local-upload.txt
butility/: CMakeLists.txt  README.md  butility.cpp
dsa/: problems-solved.json  problems-solved.py
dsa/debug/: debug.h  debug.txt
dsa/gfg/bit-manipulation/: bit-difference.cpp  check-kth-bit.cpp  first-set-bit.cpp  longest-ones.cpp  max-and.cpp  power-two.cpp  right-most-different-bit.cpp
dsa/gfg/matrix/: bool-matrix.cpp  boundary-traversal.cpp  matrix-addition.cpp  matrix-multiply.cpp  print-triangles.cpp  reverse-columns.cpp  rotate-ninety-degrees.cpp  snake-pattern.cpp  spiral-traversal.cpp  transpose.cpp
dsa/gfg/search/: binary-search.cpp  count-ones.cpp  floor.cpp  left-index.cpp  linear-search.cpp  majority-element.cpp  max-water.cpp  minimum-number-rotated-arr.cpp  peak-element.cpp  roof-top.cpp  sqrt.cpp  two-repeated.cpp
dsa/gfg/sorting/: binary-sort.cpp  insertion-sort.cpp
dsa/support/: support.cpp  support.h
helloworld-gprc/src/helloworld_server/: helloworld_server.h  main.cpp
helloworld-grpc/: README.md
helloworld-grpc/src/helloworld_client/: main.cpp
ibm-full-stack-dev/git/: README.md  branching.txt  git-training.py  local-upload.txt
projects/butility/: CMakeLists.txt  butility.cpp  butility.h
projects/debug/: client.py  debug.proto  debug_grpc.py  debug_pb2.py  server.py
projects/helloworld-gprc/: CMakeLists.txt
projects/helloworld-gprc/src/: CMakeLists.txt  helloworld.cpp
projects/helloworld-gprc/src/helloworld_client/: CMakeLists.txt  helloworld_client.cpp  helloworld_client.h  main.cpp
projects/helloworld-gprc/src/helloworld_server/: CMakeLists.txt  helloworld_server.cpp  helloworld_server.h  main.cpp
projects/red-tangle/: redtangle.py
projects/red-tangle/redtangle-core/: algorithm.py  constants.py  flat-redtangle-game.py  game.py  piece.py  test-run.py
projects/redtangle/: algorithm.py  constants.py  piece.py  redtangle_application.py  redtangle_client.py  redtangle_client_debug.py  redtangle_local.py  redtangle_server.py  redtangle_server.spec
projects/redtangle-cpp/: BUILDING.md  CMakeLists.txt  test.pb.cc  test.pb.h  test.proto
projects/redtangle-cpp/docs/: BUILDING.md
projects/redtangle-cpp/include/apps/: redtangle_builder.h
projects/redtangle-cpp/include/game/: redtangle.h
projects/redtangle-cpp/include/ui/: redtangle_ui_imgui.h
projects/redtangle-cpp/installer/: redtangle-install-script.iss
projects/redtangle-cpp/libs/: CMakeLists.txt
projects/redtangle-cpp/proto/: helloworld.proto
projects/redtangle-cpp/src/: CMakeLists.txt  helloworld.cpp  main.cpp  redtangle.cpp  redtangle.h
projects/redtangle-cpp/src/app/: redtangle_app.cpp  redtangle_app.h
projects/redtangle-cpp/src/apps/: redtangle_app.cpp  redtangle_builder.cpp
projects/redtangle-cpp/src/game/: redtangle_game.cpp  redtangle_local.cpp
projects/redtangle-cpp/src/grpc/: CMakeLists.txt  redtangle.proto
projects/redtangle-cpp/src/piece/: empty_piece.cpp  redtangle_piece.cpp
projects/redtangle-cpp/src/ui/: redtangle_ui.h  redtangle_ui_imgui.cpp  redtangle_ui_imgui.h  redtangle_ui_sdl.cpp  redtangle_ui_sdl.h
projects/redtangle/builds/: README.md  README.txt  redtangle_client.spec  redtangle_server.spec
projects/redtangle/builds/app/: redtangle_application.spec  redtangle_client.spec  redtangle_server.spec
projects/redtangle/builds/installer/: redtangle-script.iss  redtangle-server-script.iss
projects/redtangle/proto/: redtangle.proto  redtangle_pb2.py  redtangle_pb2_grpc.py
projects/redtangle/resources/: controls.md
redtangle/: BUILDING.md  README.md  TUTORIAL.md
redtangle/installer/: redtangle-install-script.iss
redtangle/src/: main.cpp
redtangle/src/apps/: redtangle_app.cpp  redtangle_builder.cpp
redtangle/src/game/: redtangle_game.cpp
redtangle/src/grpc/: redtangle_client.cpp
redtangle/src/ui/: redtangle_ui_imgui.cpp
